[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["Janine Windhoff <janine.windhoff@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.2"
pylint = "^3.0.2"
enchant = "^0.0.1"
spellchecker = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
